--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,10 @@
 <footer class="site-footer">
-
+  <div class="container">
+    <p>
+      {% if site.git_web_base %}<a href="{{ page.path | prepend: site.git_web_base }}">Git source</a> •{% endif %}
+      <a href="http://www.finnie.org/">Ryan Finnie</a>
+    </p>
+  </div>
 </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
