Add previous/next to post pages

--- a/blog-media/css/main.css
+++ b/blog-media/css/main.css
@@ -38,3 +38,12 @@ color: #eff3f7;
         color: #eff3f7;
         border: none;
 }
+
+.article-navigation {
+background-color: #eff3f7;
+margin-top: 20px;
+}
+
+.article-navigation-next {
+text-align: right;
+}
