--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,3 +13,12 @@ layout: default
   </div>
 
 </article>
+
+<div class="article-navigation row">
+  {% if page.previous %}
+  <div class="article-navigation-previous col-md-6"><a class="post-link" href="{{ page.previous.url | prepend: site.baseurl }}">&laquo; {{ page.previous.title }}</a></div>
+  {% endif %}
+  {% if page.next %}
+  <div class="article-navigation-next col-md-6"><a class="post-link" href="{{ page.next.url | prepend: site.baseurl }}">{{ page.next.title }} &raquo;</a></div>
+  {% endif %}
+</div>
