--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,11 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
+{% if page.author %}
+<meta name="author" content="{{ page.author | escape }}" />
+{% elsif site.author %}
+<meta name="author" content="{{ site.author | escape }}" />
+{% endif %}
 <meta property="og:url" content="{% if page.url %}{{ page.url | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.baseurl | prepend: site.url }}{% endif %}"/>
 <meta property="og:title" content="{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}" />
 <meta property="og:site_name" content="{{ site.title | escape }}" />
