--- a/_includes/header.html
+++ b/_includes/header.html
@@ -47,6 +47,15 @@
             {% endif %}
             {% endfor %}
           </ul>
+          {% if site.cse_id %}
+            <form action="https://www.google.com/cse" id="cse-search-box" class="navbar-form navbar-right">
+              <input type="hidden" name="cx" value="{{ site.cse_id }}" />
+              <input type="hidden" name="ie" value="UTF-8" />
+              <div class="form-group">
+                <input type="search" class="form-control" value placeholder="Site search" name="q" />
+              </div>
+            </form>
+          {% endif %}
         </div><!--/.nav-collapse -->
       </div>
     </nav>
