Disable Disqus embeds

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,7 @@ layout: default
     {{ content }}
   </div>
 
+{% if False %}
   <div id="disqus_thread" class="post-comments"></div>
   <script>
   var disqus_config = function () {
@@ -26,6 +27,7 @@ layout: default
     (d.head || d.body).appendChild(s);
   })();
 </script>
+{% endif %}
 
 </article>
 
